--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-flask
-requests
-black
+
+Flask==1.1.1
+gunicorn==19.9.0
 
 matplotlib>=3.2.2
 numpy>=1.18.5
 opencv-python>=4.1.2
-Pillow
+Pillow ==9.1.0
 PyYAML>=5.3.1
 scipy>=1.4.1
 torch>=1.7.0
@@ -15,6 +15,6 @@ tqdm>=4.41.0
 tensorboard>=2.4.1
 
 seaborn>=0.11.0
-pandas
+pandas>=0.19
 
-thop  # FLOPs computation
+thop == 0.0.31-2005241907  # FLOPs computation
